--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <main">
+  <main>
     <nav class="navbar col-12 m-auto position-fixed navbar-expand-lg navbar-dark bg-dark" style="z-index: 999;">
       <div class="container-fluid navbar col-10 m-auto">
         <a class="navbar-brand" href="#">Series</a>
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/treinobootstrap/index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -38,11 +38,8 @@
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="proximas.html">Próximas</a></li>
+                <li><a class="dropdown-item" href="proximas.html">Interesses</a></li>
               </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -79,9 +76,9 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="row col-10 m-auto">
+    <div class="row col-12 m-auto">
       <div class="container-fluid navbar col-10 m-auto">
-        <div class="col-2" style=" margin-top:10px; align-items: center;">
+        <div class="col-3" style=" margin-top:10px; align-items: center;">
           <div class="card" style="width: 15rem; m-auto;">
             <img src="/treinobootstrap/img/BB.jfif" class="card-img-top" alt="...">
             <div class="card-body">
@@ -99,11 +96,11 @@
             </div>
           </div>
         </div>
-        <div class="col-2" style="margin-top: 10px">
+        <div class="col-3" style="margin-top: 10px">
           <div class="card" style="width: 15rem; m-auto">
             <img src="/treinobootstrap/img/the good doctor.jfif" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">The Good Doctor<br><br></h5>
+              <h5 class="card-title">The Good Doctor</h5>
               <p class="card-text"></p>
             </div>
             <ul class="list-group list-group-flush">
@@ -117,7 +114,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2" style=" margin-top: 10px">
+        <div class="col-3" style=" margin-top: 10px">
           <div class="card" style="width: 15rem; m-auto">
             <img src="/treinobootstrap/img/lost capa.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -135,7 +132,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2" style="margin-top: 10px">
+        <div class="col-3" style="margin-top: 10px">
           <div class="card" style="width: 15rem; m-auto">
             <img src="/treinobootstrap/img/supernatural.jfif" class="card-img-top" alt="...">
             <div class="card-body">
@@ -153,9 +150,27 @@
             </div>
           </div>
           </div>
-          <div class="col-2" style="margin-top: 10px">
+          <div class="col-3" style="margin-top: 10px">
             <div class="card" style="width: 15rem; m-auto">
               <img src="/treinobootstrap/img/HTWM.jfif" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">How to get Away with Murder</h5>
+                <p class="card-text"></p>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Netflix</li>
+                <li class="list-group-item">6 temporadas</li>
+                <li class="list-group-item">60 episódios</li>
+              </ul>
+              <div class="card-body">
+                <a href="#" class="card-link">Assistir</a>
+                <a href="#" class="card-link">Sobre</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-3" style="margin-top: 10px">
+            <div class="card" style="width: 15rem; m-auto">
+              <img src="/treinobootstrap/img/supernatural.jfif" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Supernatural</h5>
                 <p class="card-text"></p>
@@ -171,6 +186,41 @@
               </div>
             </div>
             </div>
+            <div class="col-3" style="margin-top: 10px">
+              <div class="card" style="width: 15rem; m-auto">
+                <img src="/treinobootstrap/img/HTWM.jfif" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">How to get Away with Murder</h5>
+                  <p class="card-text"></p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Netflix</li>
+                  <li class="list-group-item">6 temporadas</li>
+                  <li class="list-group-item">60 episódios</li>
+                </ul>
+                <div class="card-body">
+                  <a href="#" class="card-link">Assistir</a>
+                  <a href="#" class="card-link">Sobre</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-3" style="margin-top: 10px">
+              <div class="card" style="width: 15rem; m-auto">
+                <img src="/treinobootstrap/img/supernatural.jfif" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Supernatural</h5>
+                  <p class="card-text"></p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Netflix</li>
+                  <li class="list-group-item">6 temporadas</li>
+                  <li class="list-group-item">60 episódios</li>
+                </ul>
+                <div class="card-body">
+                  <a href="#" class="card-link">Assistir</a>
+                  <a href="#" class="card-link">Sobre</a>
+                </div>
+              </div>
         </div>
       </div> 
       </main>
