--- a/proximas.html
+++ b/proximas.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/treinobootstrap/index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -36,11 +36,8 @@
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="proximas.html">Próximas</a></li>
+              <li><a class="dropdown-item" href="proximas.html">Interesses</a></li>
             </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -64,21 +61,25 @@
             <a class="nav-link active" href="#conteudo">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" target="_blank" href="https://www.youtube.com/watch?v=IKtL4IW6G0I&ab_channel=NextEditorial">trailer</a>
+            <a class="nav-link" type="button">Episodeos</a>
           </li>
         </ul>
       </div>
-
+      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+      </div>
       <div class="card-body">
-        <div class="row">
+        <div class="row" style="display: flex; justify-content: center;">
           <h4 class="d-flex justify-content-left">Black List</h4>
-          <div class="col-9 d-flex"style=text-align:justify;>
+          <div class="col-9 d-flex"style="text-align:justify;">
             <p>Raymond Reddington é um dos criminosos mais procurados pelo FBI. Até que um dia ele decide se entregar misteriosamente à agência, oferecendo com ele uma lista de importantes nomes da comunidade do crime. Ele deseja participar ativamente da captura de tais criminosos e faz uma única exigência: só falará com a novata agente Elizabeth Keen.</p>  
           </div>
         <div class="col-3 d-flex justify-content-right">
-          <img src="/treinobootstrap/img/black list.jpg" class="card-img-top" style="" alt="...">
+          <img src="/treinobootstrap/img/black list.jpg" class="card-img-top" alt="...">
         </div>
-        </div>
+      </div>
+          <a class="d-flex justify-content-center" style="text-decoration: none;" target="_blank" href="https://www.youtube.com/watch?v=IKtL4IW6G0I&ab_channel=NextEditorial">
+            <button style="border-radius: 5px; width: 150px; height: 40px; display: flex; align-items: center; justify-content: center; text-align: center;">TRAILER</button>
+          </a>
       </div>
 
     </div>
@@ -91,7 +92,7 @@
             <a class="nav-link active" href="#conteudo">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" target="_blank" href="https://www.youtube.com/watch?v=IKtL4IW6G0I&ab_channel=NextEditorial">trailer</a>
+            <a class="nav-link" type="button">Episodeos</a>
           </li>
         </ul>
       </div>
@@ -103,9 +104,12 @@
             <p>Raymond Reddington é um dos criminosos mais procurados pelo FBI. Até que um dia ele decide se entregar misteriosamente à agência, oferecendo com ele uma lista de importantes nomes da comunidade do crime. Ele deseja participar ativamente da captura de tais criminosos e faz uma única exigência: só falará com a novata agente Elizabeth Keen.</p>  
           </div>
         <div class="col-3 d-flex justify-content-right">
-          <img src="/treinobootstrap/img/blindspot.jpg" class="card-img-top" style="" alt="...">
+          <img src="/treinobootstrap/img/blindspot.jpg" class="card-img-top" alt="...">
         </div>
         </div>
+        <a class="d-flex justify-content-center" style="text-decoration: none;" target="_blank" href="https://www.youtube.com/watch?v=RqZkit-aCTo&t=1s">
+          <button style="border-radius: 5px; width: 150px; height: 40px; display: flex; align-items: center; justify-content: center; text-align: center;">TRAILER</button>
+        </a>
       </div>
 
     </div>
@@ -118,7 +122,7 @@
             <a class="nav-link active" href="#conteudo">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" target="_blank" href="https://www.youtube.com/watch?v=IKtL4IW6G0I&ab_channel=NextEditorial">trailer</a>
+            <a class="nav-link" type="button">Episodeos</a>
           </li>
         </ul>
       </div>
@@ -133,6 +137,9 @@
           <img src="/treinobootstrap/img/good girls.jpg" class="card-img-top" style="" alt="...">
         </div>
         </div>
+        <a class="d-flex justify-content-center" style="text-decoration: none;" target="_blank" href="https://www.youtube.com/watch?v=f3flIuy86ao">
+          <button style="border-radius: 5px; width: 150px; height: 40px; display: flex; align-items: center; justify-content: center; text-align: center;">TRAILER</button>
+        </a>
       </div>
 
     </div>
@@ -145,7 +152,7 @@
             <a class="nav-link active" href="#conteudo">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" target="_blank" href="https://www.youtube.com/watch?v=IKtL4IW6G0I&ab_channel=NextEditorial">trailer</a>
+            <a class="nav-link" type="button">Episodeos</a>
           </li>
         </ul>
       </div>
@@ -157,11 +164,13 @@
             <p>Raymond Reddington é um dos criminosos mais procurados pelo FBI. Até que um dia ele decide se entregar misteriosamente à agência, oferecendo com ele uma lista de importantes nomes da comunidade do crime. Ele deseja participar ativamente da captura de tais criminosos e faz uma única exigência: só falará com a novata agente Elizabeth Keen.</p>  
           </div>
         <div class="col-3 d-flex justify-content-right">
-          <img src="/treinobootstrap/img/black list.jpg" class="card-img-top" style="" alt="...">
+          <img src="/treinobootstrap/img/blindspot.jpg" class="card-img-top" alt="...">
         </div>
         </div>
+        <a class="d-flex justify-content-center" style="text-decoration: none;" target="_blank" href="https://www.youtube.com/watch?v=RqZkit-aCTo">
+          <button style="border-radius: 5px; width: 150px; height: 40px; display: flex; align-items: center; justify-content: center; text-align: center;">TRAILER</button>
+        </a>
       </div>
-
     </div>
   </container>
   
