--- a/proximas.html
+++ b/proximas.html
@@ -15,7 +15,7 @@
 <main>
   <nav class="navbar col-12 m-auto position-fixed navbar-expand-lg navbar-dark bg-dark" style="z-index: 999;">
     <div class="container-fluid navbar col-10 m-auto">
-      <a class="navbar-brand" href="#">Series</a>
+      <a class="navbar-brand" href="/treinobootstrap/index.html" style="margin-right: 60px; font-family: Colibri, Comic Sans; font-size: 27px;">LARIFLIX</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -101,7 +101,7 @@
         <div class="row">
           <h4 class="d-flex justify-content-left">BlindSpot</h4>
           <div class="col-9 d-flex"style=text-align:justify;>
-            <p>Raymond Reddington é um dos criminosos mais procurados pelo FBI. Até que um dia ele decide se entregar misteriosamente à agência, oferecendo com ele uma lista de importantes nomes da comunidade do crime. Ele deseja participar ativamente da captura de tais criminosos e faz uma única exigência: só falará com a novata agente Elizabeth Keen.</p>  
+            <p>A história de um agente do FBI que, misteriosamente, se vê em meio a uma conspiração. A história começa quando Jane Doe (Jaimie Alexander), completamente sem memória, é encontrada nua no meio da Times Square, em Nova York, com o corpo coberto de tatuagens recentes. E uma dessas tatuagens é o nome do agente do FBI Kurt Weller (Sullivan Stapleton). Agora, ele terá que desvendar os mistérios: Quem é esta mulher e o que significam suas tatuagens?</p>
           </div>
         <div class="col-3 d-flex justify-content-right">
           <img src="/treinobootstrap/img/blindspot.jpg" class="card-img-top" alt="...">
@@ -131,7 +131,7 @@
         <div class="row">
           <h4 class="d-flex justify-content-left">Good Girls</h4>
           <div class="col-9 d-flex"style=text-align:justify;>
-            <p>Raymond Reddington é um dos criminosos mais procurados pelo FBI. Até que um dia ele decide se entregar misteriosamente à agência, oferecendo com ele uma lista de importantes nomes da comunidade do crime. Ele deseja participar ativamente da captura de tais criminosos e faz uma única exigência: só falará com a novata agente Elizabeth Keen.</p>  
+            <p>Beth Boland (Christina Hendricks), Annie Marks (Mae Whitman) e Ruby Hill (Retta) são três mães de família tentando lidar com problemas financeiros e maternais. Cansadas de estarem sempre perdendo, elas decidem planejar um assalto a um supermercado, mas o sucesso do plano faz com que fiquem no meio de uma operação ainda maior e mais perigosa.</p>
           </div>
         <div class="col-3 d-flex justify-content-right">
           <img src="/treinobootstrap/img/good girls.jpg" class="card-img-top" style="" alt="...">
