--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main>
     <nav class="navbar col-12 m-auto position-fixed navbar-expand-lg navbar-dark bg-dark" style="z-index: 999;">
       <div class="container-fluid navbar col-10 m-auto">
-        <a class="navbar-brand" href="#">Series</a>
+        <a class="navbar-brand" href="/treinobootstrap/index.html" style="margin-right: 60px; font-family: Colibri, Comic Sans; font-size: 27px;">LARIFLIX</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
