--- a/proximas.html
+++ b/proximas.html
@@ -54,14 +54,14 @@
   <h3 style="display: flex; justify-content: center; ">INTERESSES</h3>
   <hr style="color: rebeccapurple; height: 10px;">
   <container class="row-12 d-flex justify-content-center mb-3">  
-    <div class="card text-center col-8 mb-2">
+    <div class="card text-center col-8 mb-2"style="border:outset; box-shadow: 2px 2px 10px #F7F7F7 inset;">
       <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
           <li class="nav-item" style="margin-right: 3px;">
             <a class="nav-link active" href="#conteudo">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" type="button">Episodeos</a>
+            <a class="nav-link" type="button">Episodios</a>
           </li>
         </ul>
       </div>
@@ -78,7 +78,7 @@
         </div>
       </div>
           <a class="d-flex justify-content-center" style="text-decoration: none;" target="_blank" href="https://www.youtube.com/watch?v=IKtL4IW6G0I&ab_channel=NextEditorial">
-            <button style="border-radius: 5px; width: 150px; height: 40px; display: flex; align-items: center; justify-content: center; text-align: center;">TRAILER</button>
+            <button style="border: none; box-shadow: 5px 5px 10px rgb(161, 161, 161); border-radius: 5px; width: 150px; height: 40px; display: flex; align-items: center; justify-content: center; text-align: center;">TRAILER</button>
           </a>
       </div>
 
@@ -92,7 +92,7 @@
             <a class="nav-link active" href="#conteudo">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" type="button">Episodeos</a>
+            <a class="nav-link" type="button">Episodios</a>
           </li>
         </ul>
       </div>
@@ -108,7 +108,7 @@
         </div>
         </div>
         <a class="d-flex justify-content-center" style="text-decoration: none;" target="_blank" href="https://www.youtube.com/watch?v=RqZkit-aCTo&t=1s">
-          <button style="border-radius: 5px; width: 150px; height: 40px; display: flex; align-items: center; justify-content: center; text-align: center;">TRAILER</button>
+          <button style="border: none; box-shadow: 5px 5px 10px rgb(161, 161, 161); border-radius: 5px; width: 150px; height: 40px; display: flex; align-items: center; justify-content: center; text-align: center;">TRAILER</button>
         </a>
       </div>
 
@@ -122,7 +122,7 @@
             <a class="nav-link active" href="#conteudo">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" type="button">Episodeos</a>
+            <a class="nav-link" type="button">Episodios</a>
           </li>
         </ul>
       </div>
@@ -138,7 +138,7 @@
         </div>
         </div>
         <a class="d-flex justify-content-center" style="text-decoration: none;" target="_blank" href="https://www.youtube.com/watch?v=f3flIuy86ao">
-          <button style="border-radius: 5px; width: 150px; height: 40px; display: flex; align-items: center; justify-content: center; text-align: center;">TRAILER</button>
+          <button style="border: none; box-shadow: 5px 5px 10px rgb(161, 161, 161); border-radius: 5px; width: 150px; height: 40px; display: flex; align-items: center; justify-content: center; text-align: center;">TRAILER</button>
         </a>
       </div>
 
@@ -152,7 +152,7 @@
             <a class="nav-link active" href="#conteudo">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" type="button">Episodeos</a>
+            <a class="nav-link" type="button">Episodios</a>
           </li>
         </ul>
       </div>
@@ -168,7 +168,7 @@
         </div>
         </div>
         <a class="d-flex justify-content-center" style="text-decoration: none;" target="_blank" href="https://www.youtube.com/watch?v=RqZkit-aCTo">
-          <button style="border-radius: 5px; width: 150px; height: 40px; display: flex; align-items: center; justify-content: center; text-align: center;">TRAILER</button>
+          <button style="border: none; box-shadow: 5px 5px 10px rgb(161, 161, 161); border-radius: 5px; width: 150px; height: 40px; display: flex; align-items: center; justify-content: center; text-align: center;">TRAILER</button>
         </a>
       </div>
     </div>
