--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 Minha lista
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Assistidas</a></li>
+                <li><a class="dropdown-item" href="/treinobootstrap/assistidas.html">Assistidas</a></li>
                 <li><a class="dropdown-item" href="#">assistindo</a></li>
                 <li>
                   <hr class="dropdown-divider">
@@ -229,7 +229,7 @@
       <input type="button" class="btn btn-warning col-4 m-auto mt-3 d-flex justify-content-center" value="NETFLIX"
         onclick="window.open('https://www.netflix.com/browse')">
       <input type="button" class="btn btn-warning col-4 m-auto mt-2 mb-3 d-flex justify-content-center" value="PRIMEVIDEO"
-        onclick="window.open('//www.primevideo.com/?_encoding=UTF8 language=pt_br','_blank')" padding: 10px;">
+        onclick="window.open('//www.primevideo.com/?_encoding=UTF8 language=pt_br','_blank')" padding: 10px;>
       </div>
     </footer>
 </body>
