--- a/proximas.html
+++ b/proximas.html
@@ -31,7 +31,7 @@
               Minha lista
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Assistidas</a></li>
+              <li><a class="dropdown-item" href="/treinobootstrap/assistidas.html">Assistidas</a></li>
               <li><a class="dropdown-item" href="#">assistindo</a></li>
               <li>
                 <hr class="dropdown-divider">
@@ -85,7 +85,7 @@
     </div>
   </container>
   <container class="row-12 d-flex justify-content-center mb-3">  
-    <div class="card text-center col-8 mb-2">
+    <div class="card text-center col-8 mb-2"style="border:outset; box-shadow: 2px 2px 10px #F7F7F7 inset;">
       <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
           <li class="nav-item" style="margin-right: 3px;">
@@ -115,7 +115,7 @@
     </div>
   </container>
   <container class="row-12 d-flex justify-content-center mb-3">  
-    <div class="card text-center col-8 mb-2">
+    <div class="card text-center col-8 mb-2"style="border:outset; box-shadow: 2px 2px 10px #F7F7F7 inset;">
       <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
           <li class="nav-item" style="margin-right: 3px;">
@@ -145,7 +145,7 @@
     </div>
   </container>
   <container class="row-12 d-flex justify-content-center mb-3">  
-    <div class="card text-center col-8 mb-2">
+    <div class="card text-center col-8 mb-2"style="border:outset; box-shadow: 2px 2px 10px #F7F7F7 inset;">
       <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
           <li class="nav-item" style="margin-right: 3px;">
@@ -179,7 +179,7 @@
   <input type="button" class="btn btn-warning col-4 m-auto mt-3 d-flex justify-content-center" value="NETFLIX"
     onclick="window.open('https://www.netflix.com/browse')">
   <input type="button" class="btn btn-warning col-4 m-auto mt-2 mb-3 d-flex justify-content-center" value="PRIMEVIDEO"
-    onclick="window.open('//www.primevideo.com/?_encoding=UTF8 language=pt_br','_blank')" padding: 10px;">
+    onclick="window.open('//www.primevideo.com/?_encoding=UTF8 language=pt_br','_blank')" padding: 10px;>
   </div>
 </footer>
 <script src="../node_modules/jquery/dist/jquery.min.js"></script>
