--- a/proximas.html
+++ b/proximas.html
@@ -32,7 +32,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/treinobootstrap/assistidas.html">Assistidas</a></li>
-              <li><a class="dropdown-item" href="#">assistindo</a></li>
+              <li><a class="dropdown-item" href="/treinobootstrap/assistindo.html">assistindo</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
